--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,11 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    android {
+        defaultConfig {
+            vectorDrawables.useSupportLibrary = true
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
