--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,9 @@ android {
         defaultConfig {
             vectorDrawables.useSupportLibrary = true
         }
+        buildFeatures {
+            viewBinding true
+        }
     }
     buildTypes {
         release {
