--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: "org.jlleitschuh.gradle.ktlint"
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
@@ -61,4 +61,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+}
+
+ktlint {
+    android.set(true)
+    outputColorName.set("RED")
 }
