--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,15 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven{
+            url"https://plugins.gradle.org/m2/"}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath("org.jlleitschuh.gradle:ktlint-gradle:9.4.1")
+
     }
 }
 
