--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:label=""
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme2">
         <activity android:name="com.example.myapplication.activites.MainActivity"
             android:configChanges="orientation"
+            android:theme="@style/AppTheme2.NoActionBar"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
