--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,14 +5,14 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name="com.github.movietracker.ExampleApp"
+        android:name="com.github.movietracker.AppMovie"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label=""
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme2.NoActionBar">
-        <activity android:name="com.github.movietracker.activites.MainActivity"
+        <activity android:name="com.github.movietracker.activites.ActivityMain"
             android:configChanges="orientation"
             >
             <intent-filter>
