--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,17 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.4.20"
     repositories {
         google()
         jcenter()
-        maven{
-            url"https://plugins.gradle.org/m2/"}
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         classpath("org.jlleitschuh.gradle:ktlint-gradle:9.4.1")
-
     }
 }
 
